--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
